--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/ws": "^6.0.1",
+    "jest": "^24.8.0",
     "jest-plugin-fs": "^2.9.0",
     "ws-mock": "^0.1.0"
   },
