Include reference to secrets for codecov

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,6 +19,8 @@ blocks:
 
   - name: Run tests and upload coverage report
     task:
+      secrets:
+        - name: codecov
       jobs:
         - name: npm test and upload to codecov
           commands:
